add: async storage, login register translations, link button, full welcome screen

--- a/assets/locales/en/common.json
+++ b/assets/locales/en/common.json
@@ -1,3 +1,7 @@
 {
-  "siema": "dsaddsa"
+  "log_in": "Log in",
+  "register": "Register",
+  "email": "E-mail address",
+  "password": "Password",
+  "confirm_password": "Confirm password"
 }
