--- a/assets/locales/en/register.json
+++ b/assets/locales/en/register.json
@@ -1,4 +1,5 @@
 {
   "already_have_acc": "Already have an account?",
-  "create_acc": "Create account"
+  "registration": "Registration",
+  "pwd_match": "Passwords must be the same"
 }
