--- a/assets/locales/en/common.json
+++ b/assets/locales/en/common.json
@@ -12,5 +12,6 @@
   "one_uppercase_letter": "{{ field }} must contain at least one uppercased letter",
   "min_length": "This field has to be {{ length }} characters length minimum",
   "incorrect_email": "Incorrect e-mail address",
-  "settings": "Ustawienia"
+  "settings": "Settings",
+  "delete": "Delete"
 }
