add: display days of the trip

--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -2,5 +2,6 @@
   "participants": "uczestnicy",
   "change_name": "Zmień nazwę",
   "no_trips_planned": "Brak zaplanowaych podróży. Najwyższy czas, aby to zmienić!",
-  "trips": "Podróże"
+  "trips": "Podróże",
+  "events": "Wydarzenia"
 }
