--- a/assets/locales/en/trips.json
+++ b/assets/locales/en/trips.json
@@ -2,5 +2,6 @@
   "participants": "participants",
   "change_name": "Change name",
   "no_trips_planned": "There are no trips planned in the future. It's the high time to change it!",
-  "trips": "Trips"
+  "trips": "Trips",
+  "events": "Events"
 }
