--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -3,5 +3,8 @@
   "change_name": "Zmień nazwę",
   "no_trips_planned": "Brak zaplanowaych podróży. Najwyższy czas, aby to zmienić!",
   "trips": "Podróże",
-  "events": "Wydarzenia"
+  "events": "Wydarzenia",
+  "create_success": "Pomyslnie utworzono wydarzenie",
+  "create_event": "Utwórz wydarzenie",
+  "desc": "Opis"
 }
