--- a/assets/locales/pl/common.json
+++ b/assets/locales/pl/common.json
@@ -10,7 +10,8 @@
   "required_field": "To pole jest obowiązkowe",
   "one_special_character": "{{ field }} musi posiadać przynajmniej jeden znak specjalny",
   "one_uppercase_letter": "{{ field }} musi posiadać przynajmniej jedną wielką literę",
-  "min_length": "To pole musi posiadać minimum 8 znaków",
+  "min_length": "To pole musi posiadać minimalnie {{ length }} znaków",
+  "max_length": "To pole musi posiadać maksymymalnie {{ length }} znaków",
   "incorrect_email": "Nieprawidłowy adres e-mail",
   "settings": "Ustawienia",
   "delete": "Usuń",
@@ -19,5 +20,10 @@
   "session_expired": "Twoja sesja wygasła",
   "logout": "Wyloguj",
   "not_found_message": "Oops! Wygląda na to, że się zgubiłeś!",
-  "not_found_link": "Wróć do aplikacji"
+  "not_found_link": "Wróć do aplikacji",
+  "end_after_start": "Koniec musi być później niż start",
+  "back": "Powrót",
+  "name": "Nazwa",
+  "start": "Start",
+  "end": "Koniec"
 }
