add: delete event

--- a/assets/locales/en/trips.json
+++ b/assets/locales/en/trips.json
@@ -9,5 +9,6 @@
   "desc": "Description",
   "edit_event": "Edit event",
   "edit_success": "Successfully edited event",
-  "delete_trip_success": "Successfully deleted an event"
+  "delete_trip_success": "Successfully deleted an event",
+  "delete_event": "Delete event"
 }
