--- a/assets/locales/pl/common.json
+++ b/assets/locales/pl/common.json
@@ -25,5 +25,7 @@
   "back": "Powrót",
   "name": "Nazwa",
   "start": "Start",
-  "end": "Koniec"
+  "end": "Koniec",
+  "search": "Szukaj",
+  "title": "Tytuł"
 }
