--- a/assets/locales/en/account.json
+++ b/assets/locales/en/account.json
@@ -5,5 +5,6 @@
   "logout_success": "Successfully logout from the app",
   "friends": "Friends",
   "friends_list": "List of friends",
-  "add_friend": "Add new friend"
+  "add_friend": "Add new friend",
+  "qr_not_found": "QR code for your account has not been found"
 }
