--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -13,5 +13,7 @@
   "delete_event": "Usuń wydarzenie",
   "select_participants": "Wybierz uczestników",
   "edit_trip": "Edytuj wyjazd",
-  "delete_trip": "Usuń wyjazd"
+  "delete_trip": "Usuń wyjazd",
+  "cannot_delete_owner": "Nie możesz usunąć właściciela z listy uczestników",
+  "add_participant_out_of_list": "Dodaj uczestnika z poza listy"
 }
