add: add user participants by qr code; fix: loading state for login and register form

--- a/assets/locales/en/common.json
+++ b/assets/locales/en/common.json
@@ -27,5 +27,8 @@
   "start": "Start",
   "end": "End",
   "search": "Search",
-  "title": "Title"
+  "title": "Title",
+  "choose_date": "Choose date",
+  "choose_time": "Choose time",
+  "cancel": "Cancel"
 }
