add: chat screen

--- a/assets/locales/en/common.json
+++ b/assets/locales/en/common.json
@@ -30,5 +30,6 @@
   "title": "Title",
   "choose_date": "Choose date",
   "choose_time": "Choose time",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "home": "Home"
 }
