--- a/assets/locales/pl/common.json
+++ b/assets/locales/pl/common.json
@@ -30,5 +30,6 @@
   "title": "Tytuł",
   "choose_date": "Wybierz datę",
   "choose_time": "Wybierz godznę",
-  "cancel": "Anuluj"
+  "cancel": "Anuluj",
+  "home": "Home"
 }
