--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -19,5 +19,7 @@
   "scan_friends_qr": "Zeskanuj kod QR twojego przyjaciela, aby dodać go do listy uczestników wyjazdu",
   "camera_access_needed": "Potrzebny jest dostęp do kamery, aby przeprowadzić tą operację",
   "friend_already_on_list": "Znajomy jest już na liście",
-  "incorrect_qr": "Nieprawidłowy kod QR"
+  "incorrect_qr": "Nieprawidłowy kod QR",
+  "send_chat_message": "Wyślij wiadomość do TravelBuddy",
+  "no_chat_response": "Nie udało sie uzyskać odpowiedzi od TavelBuddy"
 }
