--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -21,5 +21,6 @@
   "friend_already_on_list": "Znajomy jest już na liście",
   "incorrect_qr": "Nieprawidłowy kod QR",
   "send_chat_message": "Wyślij wiadomość do TravelBuddy",
-  "no_chat_response": "Nie udało sie uzyskać odpowiedzi od TavelBuddy"
+  "no_chat_response": "Nie udało sie uzyskać odpowiedzi od TavelBuddy",
+  "empty_conversation_placeholder": "Cześć!\nGdzie jedziemy tym razem?"
 }
