add: create trip with chatbot

--- a/assets/locales/en/trips.json
+++ b/assets/locales/en/trips.json
@@ -22,5 +22,6 @@
   "incorrect_qr": "Incorrect QR code",
   "send_chat_message": "Send a message to TravelBuddy",
   "no_chat_response": "Could not find the response from TavelBuddy",
-  "empty_conversation_placeholder": "Hi!\nWhere are we going this time?"
+  "empty_conversation_placeholder": "Hi!\nWhere are we going this time?",
+  "lets_chat": "Let's chat!"
 }
