add: participants amount in trips screen

--- a/assets/locales/en/trips.json
+++ b/assets/locales/en/trips.json
@@ -1,5 +1,5 @@
 {
-  "participants": "participants",
+  "participants": "Participants",
   "change_name": "Change name",
   "no_trips_planned": "There are no trips planned in the future. It's the high time to change it!",
   "trips": "Trips",
