--- a/assets/locales/pl/trips.json
+++ b/assets/locales/pl/trips.json
@@ -1,5 +1,5 @@
 {
-  "participants": "uczestnicy",
+  "participants": "Uczestnicy",
   "change_name": "Zmień nazwę",
   "no_trips_planned": "Brak zaplanowaych podróży. Najwyższy czas, aby to zmienić!",
   "trips": "Podróże",
